Correct path for main-script.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "servile",
   "version": "1.0.7",
   "description": "A quickstarter for NodeJS-based apps, automagically routing requests to files of same name within a given folder.",
-  "main": "lib/main.js",
+  "main": "main.js",
   "scripts": {
     "start": "node lib/serve.js"
   },
