--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.2.4",
   "description": "A quickstarter for NodeJS-based apps, automagically routing requests to files of same name within a given folder. Targeted at prototypers, not made for production.",
   "main": "main.js",
+  "bin": {
+    "serve": "./bin/serve.js"
+  },
   "scripts": {
-    "start": "node lib/serve.js"
+    "start": "node ./lib/serve.js"
   },
   "author": "Ida Ebkes",
   "repository": {
@@ -15,7 +18,9 @@
     "router",
     "quickstart",
     "lightweight",
-    "prototyping"
+    "prototyping",
+    "cli",
+    "commandline"
   ],
   "license": "MIT",
   "dependencies": {
