--- a/package.json
+++ b/package.json
@@ -22,8 +22,5 @@
     "cli",
     "commandline"
   ],
-  "license": "MIT",
-  "dependencies": {
-    "node-static": "^0.7.11"
-  }
+  "license": "MIT"
 }
