--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.1",
   "description": "A quickstarter for NodeJS-based apps, automagically routing requests to files of same name within a given folder. Targeted at prototypers, not made for production.",
   "main": "main.js",
+  "files": ["bin", "/lib"],
   "bin": {
     "serve": "./bin/serve.js"
   },
